Use … ellipsis instead of ...

--- a/projectgenerator/ui/export.ui
+++ b/projectgenerator/ui/export.ui
@@ -103,7 +103,7 @@
              <string>Browse XTF files</string>
             </property>
             <property name="text">
-             <string>...</string>
+             <string>…</string>
             </property>
            </widget>
           </item>
@@ -113,7 +113,7 @@
              <string>Select multiple Interlis models</string>
             </property>
             <property name="text">
-             <string>...</string>
+             <string>…</string>
             </property>
            </widget>
           </item>
@@ -259,7 +259,7 @@
              <string>Browse GeoPackage files</string>
             </property>
             <property name="text">
-             <string>...</string>
+             <string>…</string>
             </property>
            </widget>
           </item>
