--- a/projectgenerator/ui/import_data.ui
+++ b/projectgenerator/ui/import_data.ui
@@ -80,7 +80,7 @@
              <string>Browse GeoPackage files</string>
             </property>
             <property name="text">
-             <string>...</string>
+             <string>…</string>
             </property>
            </widget>
           </item>
@@ -132,7 +132,7 @@
              <string>Browse XTF files</string>
             </property>
             <property name="text">
-             <string>...</string>
+             <string>…</string>
             </property>
            </widget>
           </item>
@@ -149,7 +149,7 @@
              <string>Select multiple Interlis models</string>
             </property>
             <property name="text">
-             <string>...</string>
+             <string>…</string>
             </property>
            </widget>
           </item>
