--- a/projectgenerator/ui/import_data.ui
+++ b/projectgenerator/ui/import_data.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>718</width>
-    <height>625</height>
+    <height>641</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -93,8 +93,15 @@
           <string>Interlis</string>
          </property>
          <layout class="QGridLayout" name="gridLayout_5">
-          <item row="0" column="2" colspan="2">
-           <widget class="QLineEdit" name="xtf_file_line_edit"/>
+          <item row="0" column="4">
+           <widget class="QToolButton" name="xtf_file_browse_button">
+            <property name="toolTip">
+             <string>Browse XTF files</string>
+            </property>
+            <property name="text">
+             <string>…</string>
+            </property>
+           </widget>
           </item>
           <item row="1" column="0">
            <widget class="QLabel" name="label_8">
@@ -103,7 +110,37 @@
             </property>
            </widget>
           </item>
-          <item row="2" column="2">
+          <item row="1" column="4">
+           <widget class="QToolButton" name="multiple_models_button">
+            <property name="toolTip">
+             <string>Select multiple Interlis models</string>
+            </property>
+            <property name="text">
+             <string>…</string>
+            </property>
+           </widget>
+          </item>
+          <item row="5" column="3" colspan="2">
+           <widget class="QPushButton" name="ili2db_options_button">
+            <property name="text">
+             <string>Advanced Options</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="2" colspan="2">
+           <widget class="QLineEdit" name="ili_models_line_edit"/>
+          </item>
+          <item row="0" column="2" colspan="2">
+           <widget class="QLineEdit" name="xtf_file_line_edit"/>
+          </item>
+          <item row="0" column="0">
+           <widget class="QLabel" name="label">
+            <property name="text">
+             <string>XTF File</string>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="2">
            <spacer name="horizontalSpacer">
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
@@ -116,40 +153,23 @@
             </property>
            </spacer>
           </item>
-          <item row="1" column="2" colspan="2">
-           <widget class="QLineEdit" name="ili_models_line_edit"/>
-          </item>
-          <item row="0" column="0">
-           <widget class="QLabel" name="label">
-            <property name="text">
-             <string>XTF File</string>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="4">
-           <widget class="QToolButton" name="xtf_file_browse_button">
-            <property name="toolTip">
-             <string>Browse XTF files</string>
-            </property>
-            <property name="text">
-             <string>…</string>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="3">
+          <item row="3" column="3" colspan="2">
            <widget class="QCheckBox" name="chk_delete_data">
             <property name="text">
              <string>Delete existing data in affected tables</string>
             </property>
            </widget>
           </item>
-          <item row="1" column="4">
-           <widget class="QToolButton" name="multiple_models_button">
-            <property name="toolTip">
-             <string>Select multiple Interlis models</string>
+          <item row="2" column="2">
+           <widget class="QLabel" name="toml_file_info_label">
+            <property name="maximumSize">
+             <size>
+              <width>580</width>
+              <height>16777215</height>
+             </size>
             </property>
             <property name="text">
-             <string>…</string>
+             <string/>
             </property>
            </widget>
           </item>
