--- a/QgisModelBaker/ui/generate_project.ui
+++ b/QgisModelBaker/ui/generate_project.ui
@@ -368,7 +368,7 @@
   <customwidget>
    <class>CompletionLineEdit</class>
    <extends></extends>
-   <header>projectgenerator.gui.options</header>
+   <header>QgisModelBaker.gui.options</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
