--- a/QgisModelBaker/ui/generate_project.ui
+++ b/QgisModelBaker/ui/generate_project.ui
@@ -354,7 +354,7 @@
        <item row="4" column="0">
         <widget class="QGroupBox" name="mssql_config">
          <property name="title">
-          <string>Mssql</string>
+          <string>SQL Server</string>
          </property>
          <layout class="QFormLayout" name="formLayout">
           <item row="2" column="0">
