--- a/QgisModelBaker/ui/import_data.ui
+++ b/QgisModelBaker/ui/import_data.ui
@@ -310,7 +310,7 @@
        <item row="5" column="0">
         <widget class="QGroupBox" name="mssql_config">
          <property name="title">
-          <string>Mssql</string>
+          <string>SQL Server</string>
          </property>
          <layout class="QFormLayout" name="formLayout">
           <item row="2" column="0">
