--- a/QgisModelBaker/ui/export.ui
+++ b/QgisModelBaker/ui/export.ui
@@ -157,7 +157,7 @@
         </widget>
        </item>
        <item row="1" column="0">
-        <widget class="QGroupBox" name="groupBox">
+        <widget class="QGroupBox" name="db_wrapper_group_box">
          <property name="title">
           <string/>
          </property>
