--- a/QgisModelBaker/ui/generate_project.ui
+++ b/QgisModelBaker/ui/generate_project.ui
@@ -217,7 +217,7 @@
         </layout>
        </item>
        <item row="1" column="0">
-        <widget class="QGroupBox" name="groupBox">
+        <widget class="QGroupBox" name="db_wrapper_group_box">
          <property name="title">
           <string/>
          </property>
