edit command possibility for import data

--- a/QgisModelBaker/ui/generate_project.ui
+++ b/QgisModelBaker/ui/generate_project.ui
@@ -227,6 +227,9 @@
            <property name="text">
             <string>...</string>
            </property>
+           <property name="popupMode">
+            <enum>QToolButton::DelayedPopup</enum>
+           </property>
           </widget>
          </item>
         </layout>
