--- a/QgisModelBaker/ui/import_data.ui
+++ b/QgisModelBaker/ui/import_data.ui
@@ -126,11 +126,11 @@
           </item>
           <item row="3" column="3" colspan="2">
            <widget class="QCheckBox" name="chk_delete_data">
-            <property name="text">
-             <string>Delete existing data in affected tables</string>
-            </property>
             <property name="toolTip">
              <string>Delete existing data including dependencies like catalogues etc.</string>
+            </property>
+            <property name="text">
+             <string>Delete existing data in affected tables</string>
             </property>
            </widget>
           </item>
@@ -203,7 +203,17 @@
         <enum>Qt::Horizontal</enum>
        </property>
        <property name="standardButtons">
-        <set>QDialogButtonBox::Cancel|QDialogButtonBox::Help|QDialogButtonBox::Ok</set>
+        <set>QDialogButtonBox::Cancel|QDialogButtonBox::Help</set>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QToolButton" name="import_tool_button">
+       <property name="text">
+        <string>...</string>
+       </property>
+       <property name="popupMode">
+        <enum>QToolButton::MenuButtonPopup</enum>
        </property>
       </widget>
      </item>
