change warning text and remove toggle to enable the text field - it's allways enabled since there is no check needed. If a user is able to change ili2db commands, she mostly knows what she is doing.

--- a/QgisModelBaker/ui/edit_command.ui
+++ b/QgisModelBaker/ui/edit_command.ui
@@ -6,15 +6,18 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>413</width>
-    <height>266</height>
+    <width>1343</width>
+    <height>270</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Edit command</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="3" column="0" colspan="2">
+   <item row="1" column="0" colspan="2">
+    <widget class="QPlainTextEdit" name="command_edit"/>
+   </item>
+   <item row="2" column="0" colspan="2">
     <widget class="QDialogButtonBox" name="button_box">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -24,20 +27,13 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="0" colspan="2">
-    <widget class="QPlainTextEdit" name="command_edit"/>
-   </item>
-   <item row="0" column="0" colspan="2">
+   <item row="0" column="0">
     <widget class="QLabel" name="label_warning">
      <property name="text">
-      <string>There will be dragons...</string>
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Edit the command below to customize the command for ili2db. More information can be found in the &lt;a href=&quot;https://github.com/claeis/ili2db/blob/master/docs/ili2db.rst&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0000ff;&quot;&gt;ili2db documentation&lt;/span&gt;&lt;/a&gt;.&lt;br/&gt;Please note that QGIS Model Baker is optimized for the default ili2db parameters. If these parameters are modified, QGIS Model Baker might encounter problems and not provide the best results.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
-    </widget>
-   </item>
-   <item row="1" column="0" colspan="2">
-    <widget class="QCheckBox" name="chk_activate">
-     <property name="text">
-      <string>No worries. I'm a fairy.</string>
+     <property name="openExternalLinks">
+      <bool>true</bool>
      </property>
     </widget>
    </item>
