fixes on the gui behavior

--- a/QgisModelBaker/ui/import_source_selection.ui
+++ b/QgisModelBaker/ui/import_source_selection.ui
@@ -123,6 +123,12 @@
    <container>1</container>
   </customwidget>
  </customwidgets>
+ <tabstops>
+  <tabstop>file_browse_button</tabstop>
+  <tabstop>add_button</tabstop>
+  <tabstop>remove_button</tabstop>
+  <tabstop>source_list_view</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
