--- a/QgisModelBaker/ui/import_execution.ui
+++ b/QgisModelBaker/ui/import_execution.ui
@@ -14,6 +14,13 @@
    <string>Select Files</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
+   <item row="0" column="0">
+    <widget class="QCommandLinkButton" name="run_command_button">
+     <property name="text">
+      <string>Run all the ili2db sessions below</string>
+     </property>
+    </widget>
+   </item>
    <item row="1" column="0">
     <widget class="QScrollArea" name="scroll_area">
      <property name="horizontalScrollBarPolicy">
@@ -27,36 +34,11 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>1180</width>
-        <height>757</height>
+        <width>780</width>
+        <height>538</height>
        </rect>
       </property>
      </widget>
-    </widget>
-   </item>
-   <item row="0" column="0">
-    <widget class="QLabel" name="description">
-     <property name="minimumSize">
-      <size>
-       <width>0</width>
-       <height>0</height>
-      </size>
-     </property>
-     <property name="font">
-      <font>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
-     </property>
-     <property name="text">
-      <string>Models are imported - just wait</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
-     </property>
-     <property name="wordWrap">
-      <bool>true</bool>
-     </property>
     </widget>
    </item>
   </layout>
