--- a/QgisModelBaker/ui/import_source_selection.ui
+++ b/QgisModelBaker/ui/import_source_selection.ui
@@ -29,7 +29,7 @@
       </font>
      </property>
      <property name="text">
-      <string>Please add all your files and repository models you want to use for your project (you can use drag'n'drop).</string>
+      <string>Please add all your files and repository models you want to use for your project.</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
