one session per model from repository
block next key untill import is completed

--- a/QgisModelBaker/ui/import_execution.ui
+++ b/QgisModelBaker/ui/import_execution.ui
@@ -14,13 +14,6 @@
    <string>Select Files</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
-    <widget class="QCommandLinkButton" name="run_command_button">
-     <property name="text">
-      <string>Run all the ili2db sessions below</string>
-     </property>
-    </widget>
-   </item>
    <item row="1" column="0">
     <widget class="QScrollArea" name="scroll_area">
      <property name="horizontalScrollBarPolicy">
@@ -39,6 +32,13 @@
        </rect>
       </property>
      </widget>
+    </widget>
+   </item>
+   <item row="2" column="0">
+    <widget class="QCommandLinkButton" name="run_command_button">
+     <property name="text">
+      <string>Run all the ili2db sessions</string>
+     </property>
     </widget>
    </item>
   </layout>
