--- a/QgisModelBaker/ui/import_execution.ui
+++ b/QgisModelBaker/ui/import_execution.ui
@@ -14,7 +14,52 @@
    <string>Select Files</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="1" column="0">
+   <item row="7" column="3">
+    <widget class="QCommandLinkButton" name="run_command_button">
+     <property name="text">
+      <string>Run all the ili2db sessions</string>
+     </property>
+    </widget>
+   </item>
+   <item row="7" column="2">
+    <spacer name="horizontalSpacer">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>40</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="1" column="1" colspan="3">
+    <widget class="QLabel" name="description">
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>0</height>
+      </size>
+     </property>
+     <property name="font">
+      <font>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="text">
+      <string>Run the ili2db sessions to make the imports.</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+     </property>
+     <property name="wordWrap">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="1" colspan="3">
     <widget class="QScrollArea" name="scroll_area">
      <property name="horizontalScrollBarPolicy">
       <enum>Qt::ScrollBarAlwaysOff</enum>
@@ -28,17 +73,10 @@
         <x>0</x>
         <y>0</y>
         <width>780</width>
-        <height>538</height>
+        <height>515</height>
        </rect>
       </property>
      </widget>
-    </widget>
-   </item>
-   <item row="2" column="0">
-    <widget class="QCommandLinkButton" name="run_command_button">
-     <property name="text">
-      <string>Run all the ili2db sessions</string>
-     </property>
     </widget>
    </item>
   </layout>
