--- a/QgisModelBaker/ui/wizard_intro.ui
+++ b/QgisModelBaker/ui/wizard_intro.ui
@@ -17,7 +17,7 @@
    <item row="3" column="0">
     <widget class="QCommandLinkButton" name="export_button">
      <property name="text">
-      <string>Export data from existing database</string>
+      <string>Export data from an existing database</string>
      </property>
     </widget>
    </item>
@@ -49,7 +49,7 @@
    <item row="2" column="0">
     <widget class="QCommandLinkButton" name="generate_button">
      <property name="text">
-      <string>Bake a project from existing database</string>
+      <string>Generate a QGIS Project from an existing database</string>
      </property>
     </widget>
    </item>
@@ -69,7 +69,7 @@
    <item row="1" column="0">
     <widget class="QCommandLinkButton" name="import_button">
      <property name="text">
-      <string>Choose files and models to import / create database</string>
+      <string>Choose files and models to import data or generate a new database</string>
      </property>
     </widget>
    </item>
